<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/header"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question1"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroudQuestion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asnwer1_1" />

            <RadioButton
                android:id="@+id/answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1_2" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question2"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroudQuestion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2_1" />

            <RadioButton
                android:id="@+id/answer_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2_2" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question3"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroudQuestion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3_1" />

            <RadioButton
                android:id="@+id/answer_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3_2" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question4"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroudQuestion4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4_1" />

            <RadioButton
                android:id="@+id/answer_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4_2" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question5"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroudQuestion5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5_1" />

            <RadioButton
                android:id="@+id/answer_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5_2" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question6"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroudQuestion6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer6_1" />

            <RadioButton
                android:id="@+id/answer_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asnwer6_2" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question7"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/answerSeven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/answer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question8"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/answerEight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/answer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question9"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/answerNine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/answer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/answer10"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/answerTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/answer" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submitAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitAnswers"
                android:text="@string/submit_button" />

            <Button
                android:id="@+id/resetQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="resetQuestions"
                android:text="@string/reset_button" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>